# PLM-interact

./: pixi.toml  pyproject.toml
PLMinteract/inference/: inference_PPI_singleGPU.py
eval_profluent_style/: MODEL_DOWNLOAD.md  MODEL_SELECTION.md  QUICK_START.md  README.md  USAGE_SUMMARY.md  __init__.py  download_model.py  eval_profluent_style.py  quick_test.sh  test_pipeline.py
